# pymdp-cookbook

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: perception.py  thermostat.py
examples/basic/: 02_action.py  03_action_perception_loop.py
